Fix Back to Home Page alignment

--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ h1 {
     text-align: center;
 }
 
-
+a{
+    display:block;
+    text-align:right;
+    }
 
 .options {
     text-align: center;
